<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/buttonTestTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/test_TextView"
        android:textSize="60sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="200dp" 
        android:layout_marginLeft="200dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/fightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fight_Button" />

            <Button
                android:id="@+id/pokemonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_Button" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/itemsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items_Button" />

            <Button
                android:id="@+id/runButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_Button" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
